# mjlab_microduck_waddle

./: GUIDE.md  WADDLE_MJLAB_NOTES.md  WADDLE_VISUAL_SIMULATION_GUIDE.md  WADDLE_WALKING_TRAINING_GUIDE.md  export.py  pyproject.toml
scripts/: infer_policy.py
src/mjlab_microduck/robot/: microduck_constants.py  waddle_constants.py
src/mjlab_microduck/robot/microduck/: additional.xml  config_mjcf.json  robot.xml
src/mjlab_microduck/robot/microduck/assets/: bearing.part  bottom_shell.part  camera_spacer.part  foot.part  foot_tpu_bottom.part  head_base_plate.part  head_base_plate.stl  head_pitch_to_yaw.part  head_top.part  head_yaw_to_roll.part  jack.part  jumper.part  left_roll_to_pitch.part  leg_plate.part  long_neck_plate1.part  long_neck_plate1.stl  long_neck_plate2.part  long_neck_plate2.stl  neck_reinforcement.part  neck_reinforcement.stl  right_roll_to_pitch.part  roll_motor_bottom.part  roll_motor_top.part  top_shell.part  trunk_base.part  trunk_yaw.part  uc.part  uc_boards.part  uc_inside_holder.part  xl330.part
src/mjlab_microduck/robot/waddle/assets/: antenna.part  battery_enclosure.part  battery_enclosure.stl  bno055.part  bno055.stl  board.part  body_back.part  body_back.stl  body_front.part  body_front.stl  body_middle_bottom.part  body_middle_bottom.stl  body_middle_top.part  body_middle_top.stl  bulb.part  bulb.stl  drive_palonier.part  flash_light_module.part  foot_bottom_pla.part  (+71 more)
src/mjlab_microduck/tasks/: __init__.py  mdp.py  microduck_ground_pick_env_cfg.py  microduck_standup_env_cfg.py  microduck_velocity_env_cfg.py  waddle_velocity_env_cfg.py
(+7 files in other folders)
